[package]
name = "alien-metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = "0.6"
prometheus = "0.13"
reqwest = { version = "0", features = ["json", "cookies"] }
serde = "1"
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
