[package]
name = "alien-metrics"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
mockito = "0"
once_cell = "1"

[dependencies]
axum = "0.7"
prometheus = "0.13"
reqwest = { version = "0", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
url = "2"
tracing = "0"
tracing-subscriber = "0"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
